fix: change dark mode colors for searchbox and filter

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -13,6 +13,7 @@
 	--background: hsl(207, 26%, 17%);
 	--elements: hsl(209, 23%, 22%);
 	--primary-text: hsl(0, 0%, 100%);
+	--secondary-text: hsl(0, 0%, 100%);
 }
 
 //SASS MIXINS
@@ -120,8 +121,13 @@ dd {
 		border: none;
 		outline: none;
 		font-size: 0.8rem;
+		background-color: var(--elements);
 		color: var(--secondary-text);
 		letter-spacing: 0.25px;
+
+		&::placeholder {
+			color: var(--secondary-text);
+		}
 	}
 }
 
@@ -134,6 +140,7 @@ dd {
 		width: 100%;
 		padding: 1rem 15%;
 		border: none;
+		color: var(--primary-text);
 		outline: none;
 		font-family: var(--primary-font);
 		font-size: 0.9rem;
